; ModuleID = '/home/carl/AnghaBench/linux/fs/nfsd/extr_nfs4state.c_client_has_state.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfsd/extr_nfs4state.c_client_has_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs4_client = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nfs4_client*)* @client_has_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @client_has_state(%struct.nfs4_client* %0) #0 {
  %2 = alloca %struct.nfs4_client*, align 8
  store %struct.nfs4_client* %0, %struct.nfs4_client** %2, align 8
  %3 = load %struct.nfs4_client*, %struct.nfs4_client** %2, align 8
  %4 = call i64 @client_has_openowners(%struct.nfs4_client* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %22, label %6

6:                                                ; preds = %1
  %7 = load %struct.nfs4_client*, %struct.nfs4_client** %2, align 8
  %8 = getelementptr inbounds %struct.nfs4_client, %struct.nfs4_client* %7, i32 0, i32 2
  %9 = call i32 @list_empty(i32* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %22

11:                                               ; preds = %6
  %12 = load %struct.nfs4_client*, %struct.nfs4_client** %2, align 8
  %13 = getelementptr inbounds %struct.nfs4_client, %struct.nfs4_client* %12, i32 0, i32 1
  %14 = call i32 @list_empty(i32* %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %11
  %17 = load %struct.nfs4_client*, %struct.nfs4_client** %2, align 8
  %18 = getelementptr inbounds %struct.nfs4_client, %struct.nfs4_client* %17, i32 0, i32 0
  %19 = call i32 @list_empty(i32* %18)
  %20 = icmp ne i32 %19, 0
  %21 = xor i1 %20, true
  br label %22

22:                                               ; preds = %16, %11, %6, %1
  %23 = phi i1 [ true, %11 ], [ true, %6 ], [ true, %1 ], [ %21, %16 ]
  %24 = zext i1 %23 to i32
  ret i32 %24
}

declare dso_local i64 @client_has_openowners(%struct.nfs4_client*) #1

declare dso_local i32 @list_empty(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
